@@ -1,3 +1,9 @@
+Wed Jul 30 22:47:06 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBListWindow.cpp:
+	  - Double-clicking (or double-tapping) a buddy now starts an IM with
+	    them.
+
 Wed Jul 30 22:43:35 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
